2024-03-18  Enrico Schumann  <es@enricoschumann.net>

        * R/functions.R (HTMLrm): remove <style> and
        <script> content

        * inst/tinytest/test_HTMLrm.R: add tests

2024-03-12  Enrico Schumann  <es@enricoschumann.net>

        * R/functions.R (HTMLrm): add function, which removes
        HTML tags

2024-01-31  Enrico Schumann  <es@enricoschumann.net>

        * R/functions.R (.ASCII.control.rx): add but do not
        export regex for non-printable control characters
        in ASCII

2023-07-27  Enrico Schumann  <es@enricoschumann.net>

        * R/functions.R (toHTML.data.frame): add
        argument 'td.id', with default FALSE

2023-04-01  Enrico Schumann  <es@enricoschumann.net>

        * DESCRIPTION (Version): 0.3-2

2022-10-24  Enrico Schumann  <es@enricoschumann.net>

        * DESCRIPTION (Version): 0.3-1

        * R/char_refs.R: move "&NonBreakingSpace;" behind
        "&nbsp;" and "nbsp&", since the latter seem
        more-widely supported

2022-09-06  Enrico Schumann  <es@enricoschumann.net>

        * DESCRIPTION (Version): 0.3-0

        * R/functions.R (insert): add function

2022-09-03  Enrico Schumann  <es@enricoschumann.net>

        * DESCRIPTION (Version): 0.2-2

2021-09-09  Enrico Schumann  <es@enricoschumann.net>

        * Scripts/html5-references.R: Named references
        are now directly computed from
        https://html.spec.whatwg.org/entities.json ;
        which will allow easy update/checking in case
        of standard changes.  References are stored in
        file R/char_refs.R .

        * DESCRIPTION (Collate): have 'char_refs.R'
        processed first

2021-04-01  Enrico Schumann  <es@enricoschumann.net>

        * DESCRIPTION (Version): 0.2-1

2021-03-26  Enrico Schumann  <es@enricoschumann.net>

        * R/functions.R (toText.data.frame): add method
        for data frames

2021-02-16  Enrico Schumann  <es@enricoschumann.net>

        * R/functions.R (HTMLdecode): change order of