@@ -5,6 +5,9 @@ v0.4-0  (2024-04-01; not yet released)
   o "toHTML" gains an argument "td.id"; if TRUE,
     "td"-elements get id attributes
 
+  o the data-frame method of "toHTML" gains an argument
+    "replace.NA", for automatically replacing NAs
+
   o ....
 
 v0.3-2  (2023-04-01)
